Set up overlay components for adding a domain to a license

--- a/assetsSource/css/components/Overlay/Overlay.0000.pcss
+++ b/assetsSource/css/components/Overlay/Overlay.0000.pcss
@@ -57,6 +57,33 @@
     color: var(--orange);
 }
 
+.Overlay__Title {
+    font-size: 22px;
+    font-weight: var(--StandardFontBoldWeight);
+    line-height: 1.2em;
+    margin-bottom: 8px;
+}
+
+.Overlay__SubTitle {
+    font-size: 17px;
+    line-height: 1.2em;
+    margin-bottom: 8px;
+}
+
+.Overlay__SubTitle2 {
+    font-size: 14px;
+    line-height: 1.2em;
+    margin-bottom: 8px;
+}
+
+.Overlay__FormInput {
+    margin-bottom: 8px;
+}
+
+.Overlay__FormSubmitGroup {
+    text-align: right;
+}
+
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
     .Overlay {
         background-color: rgba(var(--green), 0.85);
