--- a/templates/_embeds/Overlay.twig
+++ b/templates/_embeds/Overlay.twig
@@ -3,7 +3,7 @@
         <div class="Overlay__Box">
             <div class="Overlay__BoxInner">
                 <span class="Overlay__CloseButton">{% include '_icons/icon-close.svg' %}</span>
-                {{ block('content') }}
+                {{ block('overlayContent') }}
             </div>
         </div>
     </div>
