Add add license overlay functionality

--- a/templates/_embeds/Overlay.twig
+++ b/templates/_embeds/Overlay.twig
@@ -1,8 +1,8 @@
-<div class="Overlay">
+<div class="Overlay JSOverlay">
     <div class="Overlay__Inner">
         <div class="Overlay__Box">
             <div class="Overlay__BoxInner">
-                <span class="Overlay__CloseButton">{% include '_icons/icon-close.svg' %}</span>
+                <span class="Overlay__CloseButton JSOverlay__CloseButton">{% include '_icons/icon-close.svg' %}</span>
                 {{ block('overlayContent') }}
             </div>
         </div>
