Display user's payment methods on payment methods page

--- a/assetsSource/css/components/ButtonsAdditional/ButtonsAdditional.pcss
+++ b/assetsSource/css/components/ButtonsAdditional/ButtonsAdditional.pcss
@@ -6,3 +6,20 @@
     transform: scale(.98);
     box-shadow: 0 1px 10px 1px rgba(0, 0, 0, 0.15);
 }
+
+.button--danger {
+    background-color: #c30000;
+    border-color: #c30000;
+    color: var(--white);
+}
+
+.button--danger:hover {
+    border-color: #900000;
+    background-color: #900000;
+    color: var(--white);
+}
+
+.button--danger:active {
+    background-color: #630000;
+    border-color: #630000;
+}
