Add a payment processing overlay

--- a/assetsSource/css/components/Overlay/Overlay.0000.pcss
+++ b/assetsSource/css/components/Overlay/Overlay.0000.pcss
@@ -92,3 +92,16 @@
         background-color: rgba(var(--white), 0.8);
     }
 }
+
+.Overlay__Waiting {
+    text-align: center;
+    padding: 14px;
+}
+
+.Overlay__WaitingSpinner {
+    margin-bottom: 20px;
+}
+
+.Overlay__WaitingContent {
+    line-height: 1.3em;
+}
